[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/images/SpriteSet.png" type="Texture" id=1]
[ext_resource path="res://assets/images/destroy-construction.png" type="Texture" id=2]
[ext_resource path="res://scenes/BuildingMenu.gd" type="Script" id=3]

[node name="BuildingMenu" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 400.0
margin_bottom = 240.0
color = Color( 0.376471, 0.490196, 0.737255, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StoneWallButton" type="TextureButton" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 70.0
margin_bottom = 70.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cost" type="Label" parent="StoneWallButton"]
margin_left = 16.0
margin_top = 60.0
margin_right = 36.0
margin_bottom = 74.0
text = "5G"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="StoneWallButton"]
texture = ExtResource( 1 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 50, 50 )

[node name="TowerButton" type="TextureButton" parent="."]
margin_left = 90.0
margin_top = 20.0
margin_right = 140.0
margin_bottom = 70.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cost" type="Label" parent="TowerButton"]
margin_left = 10.0
margin_top = 60.0
margin_right = 36.0
margin_bottom = 74.0
text = "10G"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="TowerButton"]
texture = ExtResource( 1 )
centered = false
offset = Vector2( 0, -50 )
region_enabled = true
region_rect = Rect2( 50, 0, 50, 100 )

[node name="CannonTowerButton" type="TextureButton" parent="."]
margin_left = 160.0
margin_top = 20.0
margin_right = 210.0
margin_bottom = 70.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cost" type="Label" parent="CannonTowerButton"]
margin_left = 10.0
margin_top = 60.0
margin_right = 36.0
margin_bottom = 74.0
text = "20G"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="CannonTowerButton"]
texture = ExtResource( 1 )
centered = false
offset = Vector2( 0, -50 )
region_enabled = true
region_rect = Rect2( 100, 0, 50, 100 )

[node name="CloseButton" type="Button" parent="."]
margin_left = 360.0
margin_top = 10.0
margin_right = 390.0
margin_bottom = 40.0
text = "x"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DestroyButton" type="TextureButton" parent="."]
margin_left = 20.0
margin_top = 120.0
margin_right = 60.0
margin_bottom = 160.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
